# python-for-fun

./: .coveragerc  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  Dockerfile  Pipfile  README.md  conf.py  conftest.py  index.rst  pyproject.toml  pytest.ini  requirements.txt  scripts.py  setup.py
app_package/: main.py
app_package/exam/palindrome/: utils.py
app_package/exam/vowel/: utils.py
app_package/hr/: models.py
app_package/payroll/: services.py
app_package/payroll/contracts/: reporting.py
app_package/protocols/: contracts.py
app_package/settings/: __init__.py  config.py
docs/: EmployeeService.dot  classes.dot  packages.dot
examples/: main.py
res/: employees5.json  err_bad_model.json  err_inifinite_report_line.json  err_missing_top_mgr.json  salary.json  salary_stg.json  salary_tst.json
scripts/: run.bat  run.sh
tests/gfg/: test_addition_under_modulo.py  test_digits_in_factorial.py  test_exactly_3_divisors.py  test_factorial.py  test_is_prime.py  test_max_alternating_subsequence.py  test_modular_inverse.py  test_multiply_under_modulo.py  test_quardratic_roots.py  test_term_of_GP.py
tests/unit/: conftest.py  test_config.py  test_contracts.py  test_exam.py  test_exam_benchmark.py  test_fabi_benchmark.py  test_services.py
